--- a/AdminWeb/Areas/Admin/Views/Category/Create.cshtml
+++ b/AdminWeb/Areas/Admin/Views/Category/Create.cshtml
@@ -4,8 +4,8 @@
     Layout = "~/Areas/Admin/Views/Shared/_LayoutAdmin.cshtml";
 }
 
-<div class="row">
-    <div class="col-lg-8">
+<div class="row justify-content-center">
+    <div class="col-lg-12 col-md-12 col-sm-12">
         <div class="ibox">
             <div class="ibox-title">
                 <h5>@ViewData["Title"]</h5>
@@ -59,27 +59,6 @@
                         </div>
                     </div>
                 </form>
-            </div>
-        </div>
-    </div>
-    
-    <div class="col-lg-4">
-        <div class="ibox">
-            <div class="ibox-title">
-                <h5>Thông tin API</h5>
-            </div>
-            <div class="ibox-content">
-                <div class="alert alert-info">
-                    <h4><i class="fa fa-info-circle"></i> Chi tiết API</h4>
-                    <p><strong>Method:</strong> POST</p>
-                    <p><strong>Endpoint:</strong></p>
-                    <code>@AdminWeb.Areas.Admin.Data.ApiConstants.CategoryApi</code>
-                    <p class="mt-2"><strong>Request Body:</strong></p>
-                    <pre class="text-success">{
-  "name": "Tên danh mục",
-  "description": "Mô tả"
-}</pre>
-                </div>
             </div>
         </div>
     </div>
