--- a/AdminWeb/Views/Shared/_Layout.cshtml
+++ b/AdminWeb/Views/Shared/_Layout.cshtml
@@ -44,6 +44,9 @@
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
+    <link href="~/lib/bootstrap-datepicker/css/bootstrap-datepicker.min.css" rel="stylesheet" />
+    <script src="~/lib/bootstrap-datepicker/js/bootstrap-datepicker.min.js"></script>
+    <script src="~/lib/bootstrap-datepicker/locales/bootstrap-datepicker.vi.min.js"></script>
     @await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
