update order ordetail2

--- a/AdminWeb/Areas/Admin/Views/Order/Index.cshtml
+++ b/AdminWeb/Areas/Admin/Views/Order/Index.cshtml
@@ -1,5 +1,6 @@
-﻿@model AdminWeb.Areas.Admin.Data.RestAPI.PagedResponse<AdminWeb.Areas.Admin.Models.Order>
 @using AdminWeb.Areas.Admin.Models
+@model PagedResponse<AdminWeb.Areas.Admin.Models.Order>
+
 @{
     ViewData["Title"] = "Quản lý đơn hàng";
 }
