--- a/AdminWeb/Areas/Admin/Views/Order/Orderdetail.cshtml
+++ b/AdminWeb/Areas/Admin/Views/Order/Orderdetail.cshtml
@@ -1,5 +1,5 @@
-﻿@using AdminWeb.Areas.Admin.Models
-@model AdminWeb.Areas.Admin.Data.RestAPI.PagedResponse<OrderDetail>
+@using AdminWeb.Areas.Admin.Models
+@model PagedResponse<OrderDetail>
 @{
     ViewData["Title"] = "Chi tiết đơn hàng";
     var orderId = ViewBag.OrderId;
