--- a/AdminWeb/Areas/Admin/Views/Shared/_LayoutAdmin.cshtml
+++ b/AdminWeb/Areas/Admin/Views/Shared/_LayoutAdmin.cshtml
@@ -38,7 +38,7 @@
     <link href="/admin/css/plugins/touchspin/jquery.bootstrap-touchspin.min.css" rel="stylesheet">
     <link href="/admin/css/plugins/dualListbox/bootstrap-duallistbox.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/css/toastr.min.css" />
-
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     @RenderSection("Styles", required: false)
 </head>
 
